--- a/templates/listar.html
+++ b/templates/listar.html
@@ -14,19 +14,19 @@
         <table class="table table-striped table-responsive table-bordered">
             <thead class="thead-default">
                 <tr>
-                    <th>Tìtulo de la canción</th>
+                    <th>titulo</th>
+                    <th>categoria</th>
+                    <th>idioma</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>La guitarra</td>
-                </tr>
-                <tr>
-                    <td>Para no verte más</td>
-                </tr>
-                <tr>
-                    <td>Balada para un gordo</td>
-                </tr>
+            {% for musica in musicas%}
+            <tr>
+                <td>{{ musica.titulo }}</td>
+                <td>{{ musica.categoria }}</td>
+                <td>{{ musica.idioma }}</td>
+            </tr>
+            {% endfor %}
             </tbody>
         </table>
     </div>
