--- a/templates/listar.html
+++ b/templates/listar.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpotyFranz</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../static/bootstrap.css">
+    <title>Discoteca</title>
+  </head>
+  <body>
     <div class="container">
         <div class="page-header">
-            <h1>SpotyFranz</h1>
-        </div>    
+            <h1>{{ titulo }}</h1>
+        </div> 
         <table class="table table-striped table-responsive table-bordered">
             <thead class="thead-default">
                 <tr>
-                    <th>Tìtulo de la canción</th>
+                    <th>Título</th>
+		    <th>Categoría</th>
+		    <th>Idioma</th>
                 </tr>
             </thead>
             <tbody>
+                {% for musica in musicas %}
                 <tr>
-                    <td>La guitarra</td>
+                    <td>{{ musica.titulo }}</td>
+	            <td>{{ musica.categoria }}</td>
+		    <td>{{ musica.idioma }}</td>
                 </tr>
-                <tr>
-                    <td>Para no verte más</td>
-                </tr>
-                <tr>
-                    <td>Balada para un gordo</td>
-                </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
-</body>
+  </body>
 </html>
