--- a/templates/listar.html
+++ b/templates/listar.html
@@ -1,21 +1,23 @@
 {% extends "template.html" %}
 {% block contenido %}
-<table class="table table-striped table-responsive table-bordered"> 
-                <thead class="thead-default">
-                    <tr>
-                        <th>Titulo</th>
-                        <th>Categoria</th>
-                        <th>Idioma</th>
-                    </tr>
-                </thead> 
-                <tbody>
-                    {% for musica in musicas %}
-                    <tr>
-                        <th>{{ musica.titulo }}</th>
-                        <th>{{ musica.categoria }}</th>
-                        <th>{{ musica.idioma }}</th>
-                    </tr>                    
-                    {% endfor %}
-                </tbody>
-            </table>
+
+<table class="table table-striped table-responsive table-bordered">
+    <thead class="thead-default">
+        <tr>
+            <th>Título</th>
+            <th>Categoría</th>
+            <th>Idioma</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for musica in musicas %}
+        <tr>
+            <td>{{ musica.titulo }}</td>
+            <td>{{ musica.categoria }}</td>
+            <td>{{ musica.idioma }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
 {% endblock %}
