--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'bootstrap.css') }}">
     <title>Discoteca</title>
-</head>
-<body>
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
+  </head>
+  <body>
     <div class="container">
 
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          <ul id="messages" class="list-unstyled">
-          {% for message in messages %}
-            <li class="alert alert-success">{{ message }}</li>
-          {% endfor %}
-          </ul>
-        {% endif %}
-      {% endwith %}
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul id="messages" class="list-unstyled">
+                {% for message in messages %}
+                    <li class="alert alert-success">{{ message }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
 
-      <h1>Iniciar sesión</h1>
-      <form method="POST" action="{{ url_for('autenticar') }}">
-        <input type="hidden" name="proxima" value="{{proxima}}">
-        <p><label>Nombre de usuario:</label><input class="form-control" type="text" name="usuario" required></p>
-        <p><label>Clave:</label><input class="form-control" type="password" name="clave" required></p>
-        <p><button class="btn btn-primary" type="submit">Entrar</button></p>
-      </form>
+        <h1>Iniciar sesión</h1>
+        <form method="POST" action="{{ url_for('autenticar') }}">
+            <input type="hidden" name="proxima" value="{{ proxima }}">
+            <p><label>Nombre de usuario:</label> <input class="form-control" type="text" name="usuario" required></p>
+            <p><label>Clave:</label> <input class="form-control" type="password" name="clave" required></p>
+            <p><button class="btn btn-primary" type="submit">Entrar</button></p>
+        </form>
+        <a class="btn btn-danger mt-4" href={{ url_for('index') }}>Inicio</a>
     </div>
 </body>
 </html>
